--- a/src/components/loader.css
+++ b/src/components/loader.css
@@ -10,6 +10,7 @@
   .loader:before {
     content:"loading...";
     color: #fe04b4;
+    font-size: 18px;
     
   }
   @keyframes l4 {to{clip-path: inset(0 -1ch 0 0)}}
